--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "author": "Raj",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
