--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.50.3",
     "next": "15.3.4",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
